Prevents sponsors div squishing on small screens

--- a/app/_scss/home/sponsors.scss
+++ b/app/_scss/home/sponsors.scss
@@ -72,8 +72,6 @@
 
 @media (max-width: 639px) {
 	#home #sponsors {
-		width: 150px;
-
 		#thoughtworks img {
 			width: 150px;
 		}
